<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price (Numbers Only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">Save</string>
    <string name="title_activity_main">Travelmantics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>
    <string name="menu_update">Update User Info</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_button">Upload Image</string>
    <string name="description_deal_image">Image of Deal</string>
    <string name="text_developer">"Developed By:\t\tKidus Worku</string>
    <string name="text_developer_email">Email:\t\tkidusmik@gmail.com</string>
    <string name="text_developer_slack">Slack Username:\t\t@Kidus"</string>
    <string name="text_enjoy">"Enjoy the App!"</string>
    <string name="text_challenge">ALC 4.0 Phase 1 Challenge 2</string>
    <string name="text_title">"Travelmantics"</string>
</resources>