<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_profile_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MyProfileActivity"
        tools:showIn="@layout/activity_my_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_profile_child1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0F3ECC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_andela"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="8dp"
                android:contentDescription=""
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_andela_logo"
                tools:srcCompat="@drawable/image_andela_logo"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_challenge_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_challenge"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_andela" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_profile_child2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/image_triangle"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_profile_child1"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/image_profile_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:background="#070707"
            android:contentDescription=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_profile_child2"
            app:srcCompat="@android:drawable/divider_horizontal_dark"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/image_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_developer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_profile_divider"
            app:layout_constraintVertical_bias="0.18"
            app:srcCompat="@android:drawable/screen_background_light_transparent" />

        <TextView
            android:id="@+id/text_developer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rectangular_card_style"
            android:drawableStart="@drawable/ic_android_black_24dp"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:selectAllOnFocus="true"
            android:text="@string/text_developer"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image_profile_divider"
            app:layout_constraintTop_toBottomOf="@+id/image_developer" />

        <TextView
            android:id="@+id/text_developer_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangular_card_style"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:text="@string/text_developer_email"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/text_developer"
            app:layout_constraintStart_toStartOf="@+id/text_developer"
            app:layout_constraintTop_toBottomOf="@+id/text_developer" />

        <TextView
            android:id="@+id/text_developer_slack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangular_card_style"
            android:drawableStart="@drawable/image_icon_slack"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:text="@string/text_developer_slack"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/text_developer"
            app:layout_constraintStart_toStartOf="@+id/text_developer"
            app:layout_constraintTop_toBottomOf="@+id/text_developer_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>